# mdnsexplorer

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/mdns/: capture.rs  mdns_message.rs  mdns_packet.rs  mod.rs  parser.rs  tests.rs  types.rs
src/mdns/tests/: parser_tests.rs
src/mdnsexplorer_app/: is_elevated.rs  mdnsexplorer_app.rs  mod.rs
src/mdnsexplorer_ui/: confirmation_dialogue_ui.rs  interface_chooser_ui.rs  mdns_message_table.rs  mdnsexplorer_ui.rs  mod.rs
