[package]
name = "mdnsexplorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = "0.29.1"
pnet = "0.35.0"
time = "0.3.37"
winapi = { version = "0.3.6", features = ["securitybaseapi", "processthreadsapi", "minwindef", "winnt"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
